fixes status-bar z-index issue

--- a/frontend/source/sass/modules/_status-bar.scss
+++ b/frontend/source/sass/modules/_status-bar.scss
@@ -13,6 +13,13 @@ $element-name: 'status-bar';
   align-items: center;
   justify-content: center;
 
+  &.-hide{
+
+    display: none;
+
+  }
+
+
 }
 
     .#{$element-name}__list{
